--- a/frontend/react_frontend/index.html
+++ b/frontend/react_frontend/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>forecast-journal-explorer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Temperature Prediciton Analysis" />
+    <meta name="author" content="Rahul Joon" />
     <meta property="og:image" content="/og-image.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   </head>
 
   <body>
